--- a/public/index.html
+++ b/public/index.html
@@ -195,7 +195,7 @@
                     <h2 class="hidden sm:flex max-w-[48.5rem] mt-[0.5rem] text-justify xl:max-w-[47.938rem]  text-[1.25rem] sm:text-[2rem] lg:text-[2.375rem] sm:leading-[2.875rem] font-[700] text-[#252525] leading-[1.75rem] mb-[1rem] sm:mb-[1.5rem]">Vì sao khách hàng nên lựa chọn dịch vụ<br>
                         Khám bệnh tại nhà của Bệnh viện Phương Đông?
                     </h2>
-                    <h2 class="flex sm:hidden mt-[0.5rem] text-justify   text-[1.25rem] sm:text-[2rem] lg:text-[2.375rem] sm:leading-[2.875rem] font-[700] text-[#252525] leading-[1.75rem] mb-[1rem] sm:mb-[1.5rem]">Vì sao khách hàng nên lựa chọn dịch vụ<br>
+                    <h2 class="flex sm:hidden mt-[0.5rem] text-justify   text-[1.25rem] sm:text-[2rem] lg:text-[2.375rem] sm:leading-[2.875rem] font-[700] text-[#252525] leading-[1.75rem] mb-[1rem] sm:mb-[1.5rem]">Vì sao khách hàng nên lựa chọn dịch vụ
                         Khám bệnh tại nhà của Bệnh viện Phương Đông?
                     </h2>
                     <div class="flex flex-row flex-wrap lg:flex-nowrap xl:flex-col 2xl:flex-row gap-[1rem] sm:gap-[2rem] 2xl:gap-[1.5rem] 3xl:gap-[2.5rem] mt-[1.5rem] sm:mt-[3.5rem]">
