--- a/public/index.html
+++ b/public/index.html
@@ -286,7 +286,7 @@
                     <div class="bg_cus_service_skew perspective-2000 right-0 w-[19rem] h-[16.188rem] sm:w-[22rem]  md:w-[44rem] xl:h-[41.188rem] md:h-[35.188rem] sm:h-[29.188rem]   absolute">
                         
                     </div>
-                    <div class="doctor_cus_service_img w-[15.75rem] h-[19.625rem] sm:w-[28.75rem] sm:h-[35.625rem] sm:bottom-[4.5rem] md:w-[33.75rem] md:h-[42.625rem] 2xl:w-[39.75rem] 2xl:h-[48.625rem] absolute left-[5.5rem] bottom-[2.2rem] sm:left-[10.5rem] xl:left-[-8.5rem] md:bottom-[0.9rem] xl:bottom-[2.3rem] 2xl:left-[-6rem] 3xl:left-[-4.5rem] 2xl:bottom-[4rem] 3xl:bottom-[3.938rem]">
+                    <div class="doctor_cus_service_img w-[15.75rem] h-[19.625rem] sm:w-[28.75rem] sm:h-[35.625rem] sm:bottom-[4.5rem] md:w-[33.75rem] md:h-[42.625rem] 2xl:w-[39.75rem] 2xl:h-[48.625rem] absolute left-[5.5rem] bottom-[2.2rem] sm:left-[10.5rem] xl:left-[-8.5rem] md:bottom-[0rem]  lg:bottom-[0.9rem] xl:bottom-[2.3rem] 2xl:left-[-6rem] 3xl:left-[-4.5rem] 2xl:bottom-[4rem] 3xl:bottom-[3.938rem]">
                         <img src="img/doctor_cus_service.png">
 
                     </div>
