--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 </head>
 <body class="font-lato ">
 
-  <header>
+  <header class="fadeInRight">
     <div class="container mx-auto">
         <div class="overflow-hidden relative bg_image_header w-full h-[39rem] sm:h-[49.313rem]">
            <div class="relative  z-100 header flex justify-between px-[0.938rem] bg-[#FFFFFF] xl:bg-transparent xl:px-0 xl:justify-center py-[0.938rem] md:py-[1.313rem] items-center xl:gap-[2.25rem] 3xl:gap-[4.875rem] ">
@@ -94,7 +94,7 @@
                 </div>
            </div>
         <div id="menu-overlay" class="menu-overlay hidden absolute"></div>
-        <div class="absolute xl:bottom-[-5rem] lg:bottom-[-15rem] sm:bottom-[-17rem] 3xl:right-[8.75rem] img_doctor_header bottom-[-13.5rem] xl:right-0 lg:right-[-11.25rem] right-[-13rem]  sm:right-[-15.25rem] w-[30rem] h-[30rem]   sm:w-[43rem] sm:h-[43.188rem]">
+        <div class="absolute xl:bottom-[-6rem] lg:bottom-[-15rem] sm:bottom-[-17rem] 3xl:right-[8.75rem] img_doctor_header bottom-[-13.5rem] xl:right-0 lg:right-[-11.25rem] right-[-13rem]  sm:right-[-15.25rem] w-[30rem] h-[30rem]   sm:w-[43rem] sm:h-[43.188rem]">
             <img src="img/img_doctor1.png" width="688" height="691" alt="img_doctor">
         </div>
         <div class="absolute flex flex-col gap-[1rem] sm:gap-[1.5rem] 2xl:top-1/4 top-[20%] 3xl:left-[16rem] 2xl:left-[5rem] left-[1.5rem]">
@@ -1714,13 +1714,13 @@
      </section>
 
 <!-- footer start -->
-     <footer class="">
+     <footer   >
         <div class="container mx-auto">
             <div class="relative w-full  bg-gradient-to-r from-[#16A085] to-[#F4D03F] ">
                 <div class="absolute z-10 w-full img_footer_group top-0 right-0 left-0">
                     <img src="img/group4.png" alt="image_group">
                 </div>
-                <div class="relative z-20 mx-[1.25rem] sm:mx-[2.5rem] xl:mx-[6.25rem] 3xl:mx-[16rem] flex flex-col gap-[1.5rem] py-[1.25rem] sm:py-[2.5rem]">
+                <div class="relative z-20 mx-[1.25rem] sm:mx-[2.5rem] xl:mx-[6.25rem] 3xl:mx-[16rem] flex flex-col gap-[1.5rem] py-[1.25rem] sm:py-[2.5rem] ">
                     <div class="md:w-[20.5rem] w-[15.625rem] relative z-30">
                        <a href="#"> <img src="img/logo3.png" alt="logo_image"></a>
                         
@@ -1778,6 +1778,8 @@
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
     <script type="module" src="js/main.js" defer></script>
- 
+    <script type="module" src="js/animate.min.css"></script>
+    <script type="module" src="js/wow.min.js"></script>
+
 </body>
 </html>
