--- a/public/index.html
+++ b/public/index.html
@@ -1328,7 +1328,7 @@
                                                         
                                                 </div>
 
-                                                <div class="flex items-center mb-[0.5rem] sm:mb-[1.188rem]">
+                                                <div class="flex items-center  ">
                                                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                         <path d="M21.5276 10.6788V11.5655C21.5264 13.6439 20.8534 15.6663 19.6089 17.331C18.3644 18.9956 16.6152 20.2134 14.6221 20.8028C12.6289 21.3921 10.4987 21.3213 8.54909 20.601C6.59947 19.8807 4.93491 18.5495 3.80367 16.8059C2.67243 15.0623 2.13512 12.9997 2.27187 10.9258C2.40862 8.85191 3.21211 6.87775 4.56251 5.29779C5.91291 3.71783 7.73785 2.61672 9.76518 2.15867C11.7925 1.70062 13.9136 1.91018 15.8121 2.7561" stroke="#0A9949" stroke-width="1.92766" stroke-linecap="round" stroke-linejoin="round"/>
                                                         <path d="M21.5273 3.85522L11.889 13.5032L8.99756 10.6117" stroke="#0A9949" stroke-width="1.92766" stroke-linecap="round" stroke-linejoin="round"/>
